--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a:hover
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
 }
 
-.sub_menu_box {
+/*.sub_menu_box {
   display: block;
   position: fixed;
   visibility: hidden;
@@ -98,7 +98,7 @@ a:hover
   text-align: center;
   background-color: #CCFFF1;
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-}
+}*/
 
 /* элементы меню */
 .menu_item {
@@ -111,7 +111,7 @@ a:hover
   text-decoration: none;
 }
 
-.sub_menu_item {
+/*.sub_menu_item {
   display: block;
   padding: 12px 34px;
   color: #173;
@@ -119,7 +119,7 @@ a:hover
   font-size: 20px;
   font-weight: 400;
   text-decoration: none;
-}
+}*/
 
 .menu_item:hover {
   background-color: #CFD8DC;
