--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ aside{
 	width: 10%;
 	border: 0.1vw dotted white;
 	text-align: center;
+	height: 57vw;
 }
 
 main{
@@ -41,6 +42,7 @@ main{
 	width: 89%;
 	border: 0.1vw dotted white;
 	text-align: center;
+	height: 57vw;
 }
 
 article >.cactus{
