--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 		background-position:center; /* Положение фона */
 		background-repeat: no-repeat; /* Отменяем повторение фона */
 		background-color: pink;
-		background-size: 100vw;
+		background-size: 100%;
 		background-attachment: fixed;
 }
 header {
