--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-		background-image: url(img/backgrounds/main_bg.jpg); /* Путь к фоновому рисунку */
+		background-image: url(img/backgrounds/main_b/g.jpg); /* Путь к фоновому рисунку */
 		background-position:center; /* Положение фона */
 		background-repeat: no-repeat; /* Отменяем повторение фона */
 		background-color: pink;
@@ -13,23 +13,28 @@ header {
 		top:0px;
 		position: fixed;
 		background-color: rgba(255, 192, 203, 1);
-		border: 0.1vw dotted white;
+		border: 0.1vw solid white;
+		border-radius: 0.2vw;
 		height: 1.5vw;
-		width: 100%;
+		width: 99%;
 		font-size: 2vw;
 		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		font-weight:bold;
 		color:white;
+		margin-left: 0.4vw;
+		margin-top: 0.01vw;
+		margin-right: 2vw;
 }
 
 aside{
 	position: relative;
 	margin-top: 1.7vw;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	background-color: rgba(111, 211, 151, 0.42);
+	background-color: rgba(111, 211, 151, 0.52);
 	float:left;
 	width: 10%;
-	border: 0.1vw dotted white;
+	border: 0.1vw solid white;
+	border-radius: 0.5vw;
 	text-align: center;
 	height: 57vw;
 }
@@ -38,17 +43,19 @@ main{
 	float:right;
 	position: relative;
 	margin-top: 1.7vw;
-	background-color: rgba(135, 206, 235, 0.55);
+	background-color: rgba(135, 206, 235, 1.25);
 	width: 89%;
-	border: 0.1vw dotted white;
+	border-radius: 0.5vw;
+	border: 0.1vw solid white;
 	text-align: center;
+	padding-bottom: 2vw;
 }
 article img{
 	width: 30%;
 }
 
 .content_img{
-	margin
+	margin-top:2.9vw;
 }
 
 article >.cactus{
@@ -66,7 +73,6 @@ article >.snake_plant{
 	width:70%;
 	position: relative;
 	left: 15%;
-	border: 2px solid red;
 }
 
 footer{
@@ -77,7 +83,8 @@ footer{
 	margin-bottom: 0.5vw;
 	background-color: rgba(255,250,205, 0.55);
 	width: 99%;
-	border: 0.1vw dotted white;
+	border: 0.1vw solid white;
+	border-radius: 0.5vw;
 }
 
 a
@@ -305,6 +312,7 @@ blockquote p{
 	width:3vw;
 	border: none;
 	left: 50%;
+	margin: 0;
 }
 
 .sociallogo p{
