--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@ a:hover
   text-decoration: none;
 }
 
+. menu_item current{
+	color: blue;
+} 
+
 .menu_item:hover {
   background-color: #CFD8DC;
 }
@@ -264,7 +268,6 @@ p{
 		font-size: 1.3vw;
 		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		text-align: center;
-		margin-bottom: 1em;
 		padding-left: 3vw;
 		padding-right: 3vw;
 }
