--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ a:hover
   list-style: none;
   text-align: left;
   background-color: #CCFFF1;
-  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
 }
 
 /* элементы меню */
@@ -143,9 +143,9 @@ a:hover
   text-decoration: none;
 }
 
-. menu_item current{
-	color: blue;
-} 
+.current{
+	color: tomato;
+}
 
 .menu_item:hover {
   background-color: #CFD8DC;
@@ -270,6 +270,8 @@ p{
 		text-align: center;
 		padding-left: 3vw;
 		padding-right: 3vw;
+		margin-top: auto;
+		margin-bottom: 0;
 }
 
 section ul{
