--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-		background-image: url(img/backgrounds/brick.jpg); /* Путь к фоновому рисунку */
+		background-image: url(../img/backgrounds/brick.jpg); /* Путь к фоновому рисунку */
 		background-repeat: repeat-y; /* Отменяем повторение фона */
 		background-color: #ffc1d8;
 		background-size: 100%;
@@ -191,12 +191,11 @@ ul.menu_box > li:hover > ul.sub_menu{
   align-items: center;  /* центрируем содержимое кнопки */
   position: relative;
 	float: left;
-	margin-top: 0.45vh;
-	margin-bottom: 0.3vh;
-	margin-left: 1vmax;
-	padding: 0;
+	margin-top: 0.20em;
+	margin-bottom: 0.20em;
+	margin-left: 0.5em;
   width: 1em;
-	height: 0.8em;
+	height: 1em;
   cursor: pointer;
   z-index: 1;
 }
@@ -206,23 +205,24 @@ ul.menu_box > li:hover > ul.sub_menu{
 .menu_btn > span::after {
   display: block;
   position: absolute;
-  width: 100%;
-  height: 0.2vh;
+	width: 0.95em;
+  height: 0.08em;
   background-color: white;
 	z-index: 1;
+	border-radius: 1em;
+	top: 30%;
 }
 .menu_btn > span {
   content: '';
-  top: 0.3em;
 }
 
 .menu_btn > span::before {
   content: '';
-  top: -0.3em;
+  top: -0.28em;
 }
 .menu_btn > span::after {
   content: '';
-  top: 0.3em;
+  top: 0.28em;
 }
 #menu_toggle:checked ~ .menu_btn > span {
   transform: rotate(45deg);
